Workouttemplate wordt omgezet in nieuwe workout
